# RAGG-engine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_demo.py
core/: __init__.py  chain_builder.py  data_processing.py  embedding_and_vector_db.py  llm_model.py  prompt_template.py
